--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "writing-app-v2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "3.5.2",
+    "node": "10.12.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.0",
