--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "node": "10.12.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.15.3",
     "react": "^16.8.0",
     "react-axios": "^2.0.3",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "2.1.3"
+    "react-headroom": "^2.2.4",
+    "react-scripts": "2.1.3",
+    "react-scroll": "^1.7.11"
   },
   "scripts": {
     "start": "react-scripts start",
