--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.0",
     "react-axios": "^2.0.3",
     "react-dom": "^16.8.0",
+    "react-google-login": "^5.0.2",
     "react-grid-system": "^4.4.2",
     "react-headroom": "^2.2.4",
     "react-scripts": "2.1.3",
