--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.4.0-beta.7",
     "react-scripts": "2.1.3",
     "react-scroll": "^1.7.11",
+    "react-text-truncate": "^0.14.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "serve": "^10.1.2"
