--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10.12.0"
   },
   "dependencies": {
+    "actioncable": "^5.2.2-1",
     "axios": "^0.15.3",
     "query-string": "^6.3.0",
     "react": "^16.8.0",
