--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "actioncable": "^5.2.2-1",
     "axios": "^0.15.3",
+    "moment": "^2.24.0",
     "query-string": "^6.3.0",
     "react": "^16.8.0",
     "react-axios": "^2.0.3",
